@@ -22,7 +22,7 @@ import com.fasterxml.jackson.databind.node.ArrayNode;
 import com.graphhopper.application.GraphHopperApplication;
 import com.graphhopper.application.GraphHopperServerConfiguration;
 import com.graphhopper.application.util.GraphHopperServerTestConfiguration;
-import com.graphhopper.config.Profile;
+import com.graphhopper.routing.TestProfiles;
 import com.graphhopper.util.Helper;
 import io.dropwizard.testing.junit5.DropwizardAppExtension;
 import io.dropwizard.testing.junit5.DropwizardExtensionsSupport;
@@ -32,7 +32,7 @@ import org.junit.jupiter.api.Test;
 import org.junit.jupiter.api.extension.ExtendWith;
 
 import java.io.File;
-import java.util.Collections;
+import java.util.List;
 
 import static com.graphhopper.application.util.TestUtils.clientTarget;
 import static org.junit.jupiter.api.Assertions.*;
@@ -51,10 +51,10 @@ public class NearestResourceWithEleTest {
                 putObject("graph.elevation.provider", "srtm").
                 putObject("graph.elevation.cache_dir", "../core/files/").
                 putObject("prepare.min_network_size", 0).
-                putObject("graph.flag_encoders", "car").
                 putObject("datareader.file", "../core/files/monaco.osm.gz").
+                putObject("import.osm.ignored_highways", "").
                 putObject("graph.location", dir).
-                setProfiles(Collections.singletonList(new Profile("car").setVehicle("car").setWeighting("fastest")));
+                setProfiles(List.of(TestProfiles.constantSpeed("car")));
         return config;
     }
 
@@ -73,7 +73,7 @@ public class NearestResourceWithEleTest {
         double lon = point.get(0).asDouble();
         double lat = point.get(1).asDouble();
         double ele = point.get(2).asDouble();
-        assertTrue(lat == 43.7307001 && lon == 7.4213923 && ele == 66.0, "nearest point wasn't correct: lat=" + lat + ", lon=" + lon + ", ele=" + ele);
+        assertTrue(lat == 43.73084185257864 && lon == 7.420749379140277 && ele == 59.0, "nearest point wasn't correct: lat=" + lat + ", lon=" + lon + ", ele=" + ele);
     }
 
     @Test
@@ -84,7 +84,7 @@ public class NearestResourceWithEleTest {
         assertEquals(2, point.size(), "returned point is not 2D: " + point);
         double lon = point.get(0).asDouble();
         double lat = point.get(1).asDouble();
-        assertTrue(lat == 43.7307001 && lon == 7.4213923, "nearest point wasn't correct: lat=" + lat + ", lon=" + lon);
+        assertTrue(lat == 43.73084185257864 && lon == 7.420749379140277, "nearest point wasn't correct: lat=" + lat + ", lon=" + lon);
 
         // Default elevation is false        
         json = clientTarget(app, "/nearest?point=43.730864,7.420771").request().buildGet().invoke().readEntity(JsonNode.class);
@@ -93,6 +93,6 @@ public class NearestResourceWithEleTest {
         assertEquals(2, point.size(), "returned point is not 2D: " + point);
         lon = point.get(0).asDouble();
         lat = point.get(1).asDouble();
-        assertTrue(lat == 43.7307001 && lon == 7.4213923, "nearest point wasn't correct: lat=" + lat + ", lon=" + lon);
+        assertTrue(lat == 43.73084185257864 && lon == 7.420749379140277, "nearest point wasn't correct: lat=" + lat + ", lon=" + lon);
     }
 }
