@@ -19,15 +19,13 @@
 package com.graphhopper.application.resources;
 
 import com.fasterxml.jackson.databind.JsonNode;
-import com.fasterxml.jackson.databind.ObjectMapper;
-import com.fasterxml.jackson.dataformat.yaml.YAMLFactory;
 import com.graphhopper.application.GraphHopperApplication;
 import com.graphhopper.application.GraphHopperServerConfiguration;
 import com.graphhopper.application.util.GraphHopperServerTestConfiguration;
 import com.graphhopper.config.CHProfile;
 import com.graphhopper.config.Profile;
-import com.graphhopper.routing.weighting.custom.CustomProfile;
-import com.graphhopper.util.CustomModel;
+import com.graphhopper.routing.TestProfiles;
+import com.graphhopper.util.GHUtility;
 import com.graphhopper.util.Helper;
 import io.dropwizard.testing.junit5.DropwizardAppExtension;
 import io.dropwizard.testing.junit5.DropwizardExtensionsSupport;
@@ -42,7 +40,9 @@ import javax.ws.rs.client.Entity;
 import javax.ws.rs.core.Response;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStreamReader;
 import java.util.Arrays;
+import java.util.List;
 
 import static com.graphhopper.application.util.TestUtils.clientTarget;
 import static com.graphhopper.json.Statement.If;
@@ -59,44 +59,37 @@ public class RouteResourceCustomModelTest {
     private static GraphHopperServerConfiguration createConfig() {
         GraphHopperServerConfiguration config = new GraphHopperServerTestConfiguration();
         config.getGraphHopperConfiguration().
-                putObject("graph.flag_encoders", "bike,car,foot,wheelchair,roads").
                 putObject("prepare.min_network_size", 200).
                 putObject("datareader.file", "../core/files/north-bayreuth.osm.gz").
                 putObject("graph.location", DIR).
-                putObject("graph.encoded_values", "max_height,max_weight,max_width,hazmat,toll,surface,track_type").
-                putObject("custom_model_folder", "./src/test/resources/com/graphhopper/application/resources").
-                setProfiles(Arrays.asList(
-                        new Profile("wheelchair"),
-                        new CustomProfile("roads").setCustomModel(new CustomModel()).setVehicle("roads"),
-                        new CustomProfile("car").setCustomModel(new CustomModel()).setVehicle("car"),
-                        new CustomProfile("bike").setCustomModel(new CustomModel().setDistanceInfluence(0)).setVehicle("bike"),
-                        new Profile("bike_fastest").setWeighting("fastest").setVehicle("bike"),
-                        new CustomProfile("truck").setVehicle("car").
-                                putHint("custom_model_file", "truck.yml"),
-                        new CustomProfile("cargo_bike").setVehicle("bike").
-                                putHint("custom_model_file", "cargo_bike.yml"),
-                        new CustomProfile("json_bike").setVehicle("bike").
-                                putHint("custom_model_file", "json_bike.json"),
-                        new Profile("foot_profile").setVehicle("foot").setWeighting("fastest"),
-                        new CustomProfile("car_no_unclassified").setCustomModel(
-                                        new CustomModel(new CustomModel().
-                                                addToPriority(If("road_class == UNCLASSIFIED", LIMIT, 0)))).
-                                setVehicle("car"),
-                        new CustomProfile("custom_bike").
-                                setCustomModel(new CustomModel().
-                                        addToSpeed(If("road_class == PRIMARY", LIMIT, 28)).
-                                        addToPriority(If("max_width < 1.2", MULTIPLY, 0))).
-                                setVehicle("bike"),
-                        new CustomProfile("custom_bike2").setCustomModel(
-                                        new CustomModel(new CustomModel().
-                                                addToPriority(If("road_class == TERTIARY || road_class == TRACK", MULTIPLY, 0)))).
-                                setVehicle("bike"),
-                        new CustomProfile("custom_bike3").setCustomModel(
-                                        new CustomModel(new CustomModel().
-                                                addToSpeed(If("road_class == TERTIARY || road_class == TRACK", MULTIPLY, 10)).
-                                                addToSpeed(If("true", LIMIT, 40)))).
-                                setVehicle("bike"))).
-                setCHProfiles(Arrays.asList(new CHProfile("truck"), new CHProfile("car_no_unclassified")));
+                putObject("graph.encoded_values", "max_height,max_weight,max_width,hazmat,toll,surface,track_type,hgv,average_slope,max_slope,bus_access").
+                putObject("custom_areas.directory", "./src/test/resources/com/graphhopper/application/resources/areas").
+                putObject("import.osm.ignored_highways", "").
+                putObject("graph.encoded_values", "max_height, max_weight, max_width, hazmat, toll, surface, track_type, hgv, average_slope, max_slope, bus_access, " +
+                        "car_access, car_average_speed, bike_access, bike_priority, bike_average_speed, road_class, road_access, get_off_bike, roundabout, foot_access, foot_priority, foot_average_speed").
+                setProfiles(List.of(
+                        TestProfiles.constantSpeed("roads", 120),
+                        new Profile("car").setCustomModel(TestProfiles.accessAndSpeed("unused", "car").getCustomModel().setDistanceInfluence(70d)),
+                        new Profile("car_with_area").setCustomModel(TestProfiles.accessAndSpeed("unused", "car").getCustomModel().addToPriority(If("in_external_area52", MULTIPLY, "0.05"))),
+                        TestProfiles.accessSpeedAndPriority("bike"),
+                        new Profile("bus").setCustomModel(null).putHint("custom_model_files", List.of("bus.json")),
+                        new Profile("cargo_bike").setCustomModel(null).putHint("custom_model_files", List.of("cargo_bike.json")),
+                        new Profile("json_bike").setCustomModel(null).putHint("custom_model_files", List.of("bike.json", "bike_elevation.json")),
+                        TestProfiles.accessSpeedAndPriority("foot_profile", "foot"),
+                        new Profile("car_no_unclassified").setCustomModel(TestProfiles.accessAndSpeed("unused", "car").getCustomModel().
+                                                addToPriority(If("road_class == UNCLASSIFIED", LIMIT, "0"))),
+                        new Profile("custom_bike").
+                                setCustomModel(TestProfiles.accessSpeedAndPriority("unused", "bike").getCustomModel().
+                                        addToSpeed(If("road_class == PRIMARY", LIMIT, "28")).
+                                        addToPriority(If("max_width < 1.2", MULTIPLY, "0"))),
+                        new Profile("custom_bike2").setCustomModel(
+                                TestProfiles.accessSpeedAndPriority("unused", "bike").getCustomModel().setDistanceInfluence(70d).
+                                                addToPriority(If("road_class == TERTIARY || road_class == TRACK", MULTIPLY, "0"))),
+                        new Profile("custom_bike3").setCustomModel(TestProfiles.accessSpeedAndPriority("unused", "bike").getCustomModel().
+                                                addToSpeed(If("road_class == TERTIARY || road_class == TRACK", MULTIPLY, "10")).
+                                                addToSpeed(If("true", LIMIT, "40")))
+                )).
+                setCHProfiles(Arrays.asList(new CHProfile("bus"), new CHProfile("car_no_unclassified")));
         return config;
     }
 
@@ -108,39 +101,18 @@ public class RouteResourceCustomModelTest {
 
     @Test
     public void testBlockAreaNotAllowed() {
-        String body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"car\", \"custom_model\": {}, \"block_area\": \"abc\", \"ch.disable\": true}";
+        String body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"car\", \"block_area\": \"abc\", \"ch.disable\": true}";
         JsonNode jsonNode = query(body, 400).readEntity(JsonNode.class);
-        assertMessageStartsWith(jsonNode, "When using `custom_model` do not use `block_area`. Use `areas` in the custom model instead");
+        assertMessageStartsWith(jsonNode, "The `block_area` parameter is no longer supported. Use a custom model with `areas` instead.");
     }
 
     @Test
-    public void testCHPossibleWithoutCustomModel() {
-        // the truck profile is a custom profile and we can use its CH preparation as long as we do not add a custom model
-        String body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"truck\"}";
+    public void testBus() {
+        // the bus profile is a custom profile and we can use its CH preparation as long as we do not add a custom model
+        String body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"bus\"}";
         JsonNode path = getPath(body);
-        assertEquals(path.get("distance").asDouble(), 1500, 10);
-        assertEquals(path.get("time").asLong(), 151_000, 1_000);
-    }
-
-    @Test
-    public void testDisableCHAndUseCustomModel() {
-        // If we specify a custom model we get an error, because it does not work with CH.
-        String body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"truck\", \"custom_model\": {" +
-                "\"speed\": [{\"if\": \"road_class == PRIMARY\", \"multiply_by\": 0.9}]" +
-                "}}";
-        JsonNode json = query(body, 400).readEntity(JsonNode.class);
-        assertMessageStartsWith(json, "The 'custom_model' parameter is currently not supported for speed mode, you need to disable speed mode with `ch.disable=true`.");
-
-        // ... even when the custom model is just an empty object
-        body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"truck\", \"custom_model\": {}}";
-        json = query(body, 400).readEntity(JsonNode.class);
-        assertMessageStartsWith(json, "The 'custom_model' parameter is currently not supported for speed mode, you need to disable speed mode with `ch.disable=true`.");
-
-        // ... but when we disable CH it works of course
-        body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"truck\", \"custom_model\": {}, \"ch.disable\": true}";
-        JsonNode path = getPath(body);
-        assertEquals(path.get("distance").asDouble(), 1500, 10);
-        assertEquals(path.get("time").asLong(), 151_000, 1_000);
+        assertEquals(610, path.get("distance").asDouble(), 10);
+        assertEquals(27_000, path.get("time").asLong(), 1_000);
     }
 
     @Test
@@ -171,23 +143,14 @@ public class RouteResourceCustomModelTest {
     }
 
     @Test
-    public void testCustomWeightingRequired() {
-        String body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"foot_profile\", \"custom_model\": {}, \"ch.disable\": true}";
+    public void testVehicleAndWeightingNotAllowed() {
+        String body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"truck\",\"custom_model\": {}, \"ch.disable\": true, \"vehicle\": \"truck\"}";
         JsonNode jsonNode = query(body, 400).readEntity(JsonNode.class);
-        assertEquals("The requested profile 'foot_profile' cannot be used with `custom_model`, because it has weighting=fastest", jsonNode.get("message").asText());
-    }
+        assertEquals("The 'vehicle' parameter is no longer supported. You used 'vehicle=truck'", jsonNode.get("message").asText());
 
-    @Test
-    public void testWeightingAndVehicleNotAllowed() {
-        String body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"truck\"," +
-                " \"custom_model\": {}, \"ch.disable\": true, \"vehicle\": \"truck\"}";
-        JsonNode jsonNode = query(body, 400).readEntity(JsonNode.class);
-        assertEquals("Since you are using the 'profile' parameter, do not use the 'vehicle' parameter. You used 'vehicle=truck'", jsonNode.get("message").asText());
-
-        body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"truck\"," +
-                " \"custom_model\": {}, \"ch.disable\": true, \"weighting\": \"custom\"}";
+        body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"truck\",\"custom_model\": {}, \"ch.disable\": true, \"weighting\": \"custom\"}";
         jsonNode = query(body, 400).readEntity(JsonNode.class);
-        assertEquals("Since you are using the 'profile' parameter, do not use the 'weighting' parameter. You used 'weighting=custom'", jsonNode.get("message").asText());
+        assertEquals("The 'weighting' parameter is no longer supported. You used 'weighting=custom'", jsonNode.get("message").asText());
     }
 
     @ParameterizedTest
@@ -217,13 +180,19 @@ public class RouteResourceCustomModelTest {
     }
 
     @Test
+    public void testAvoidArea() {
+        JsonNode path = getPath("{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"car_with_area\", \"ch.disable\": true, \"custom_model\": {}}");
+        assertEquals(path.get("distance").asDouble(), 3073, 10);
+    }
+
+    @Test
     public void testCargoBike() throws IOException {
         String body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"bike\", \"custom_model\": {}, \"ch.disable\": true}";
         JsonNode path = getPath(body);
         assertEquals(path.get("distance").asDouble(), 661, 5);
 
-        String jsonFromYamlFile = yamlToJson(Helper.isToString(getClass().getResourceAsStream("cargo_bike.yml")));
-        body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"bike\", \"custom_model\":" + jsonFromYamlFile + ", \"ch.disable\": true}";
+        String json = Helper.readJSONFileWithoutComments(new InputStreamReader(GHUtility.class.getResourceAsStream("/com/graphhopper/custom_models/cargo_bike.json")));
+        body = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]], \"profile\": \"bike\", \"custom_model\":" + json + ", \"ch.disable\": true}";
         path = getPath(body);
         assertEquals(path.get("distance").asDouble(), 1007, 5);
 
@@ -235,14 +204,16 @@ public class RouteResourceCustomModelTest {
 
     @Test
     public void testJsonBike() {
-        String jsonQuery = "{" +
-                " \"points\": [[11.58199, 50.0141], [11.5865, 50.0095]]," +
-                " \"profile\": \"json_bike\"," +
-                " \"custom_model\": {}," +
-                " \"ch.disable\": true" +
-                "}";
+        String jsonQuery = "{\"points\": [[11.58199, 50.0141], [11.5865, 50.0095]]," +
+                " \"profile\": \"json_bike\", \"ch.disable\": true }";
         JsonNode path = getPath(jsonQuery);
         assertEquals(660, path.get("distance").asDouble(), 10);
+
+        // check reverse oneway is allowed for short distances
+        jsonQuery = "{\"points\": [[11.545768,50.020137], [11.545728,50.020115]]," +
+                " \"profile\": \"json_bike\", \"ch.disable\": true }";
+        path = getPath(jsonQuery);
+        assertEquals(4, path.get("distance").asDouble(), 1);
     }
 
     @Test
@@ -250,21 +221,12 @@ public class RouteResourceCustomModelTest {
         String coords = " \"points\": [[11.539421, 50.018274], [11.593966, 50.007739]],";
         String jsonQuery = "{" +
                 coords +
-                " \"profile\": \"bike_fastest\"," +
+                " \"profile\": \"bike\"," +
                 " \"ch.disable\": true" +
                 "}";
         JsonNode path = getPath(jsonQuery);
         double expectedDistance = path.get("distance").asDouble();
         assertEquals(4781, expectedDistance, 10);
-
-        // base profile bike has to use distance_influence = 0 (unlike default) otherwise not comparable to "fastest"
-        jsonQuery = "{" +
-                coords +
-                " \"profile\": \"bike\"," +
-                " \"ch.disable\": true" +
-                "}";
-        path = getPath(jsonQuery);
-        assertEquals(4781, path.get("distance").asDouble(), 10);
     }
 
     @Test
@@ -302,7 +264,7 @@ public class RouteResourceCustomModelTest {
                 " \"ch.disable\": true" +
                 "}";
         path = getPath(body);
-        assertEquals(5370, path.get("distance").asDouble(), 5);
+        assertEquals(5827, path.get("distance").asDouble(), 5);
     }
 
     @Test
@@ -341,14 +303,14 @@ public class RouteResourceCustomModelTest {
     }
 
     @Test
-    public void wheelchair() {
-        String jsonQuery = "{" +
-                " \"points\": [[11.58199, 50.0141], [11.5865, 50.0095]]," +
-                " \"profile\": \"wheelchair\"," +
-                " \"ch.disable\": true" +
-                "}";
-        JsonNode path = getPath(jsonQuery);
-        assertEquals(1500, path.get("distance").asDouble(), 10);
+    public void testHgv() {
+        String body = "{\"points\": [[11.603998, 50.014554], [11.594095, 50.023334]], \"profile\": \"roads\", \"ch.disable\":true," +
+                "\"custom_model\": {" +
+                "   \"speed\": [{\"if\":\"true\", \"limit_to\":\"car_average_speed * 0.9\"}], \n" +
+                "   \"priority\": [{\"if\": \"car_access == false || hgv == NO || max_width < 3 || max_height < 4\", \"multiply_by\": \"0\"}]}}";
+        JsonNode path = getPath(body);
+        assertEquals(7314, path.get("distance").asDouble(), 10);
+        assertEquals(944 * 1000, path.get("time").asLong(), 1_000);
     }
 
     private void assertMessageStartsWith(JsonNode jsonNode, String message) {
@@ -370,17 +332,5 @@ public class RouteResourceCustomModelTest {
         JsonNode jsonNode = response.readEntity(JsonNode.class);
         assertEquals(code, response.getStatus(), jsonNode.has("message") ? jsonNode.get("message").toString() : "no error message");
         return response;
-    }
-
-    private static String yamlToJson(String yaml) {
-        try {
-            ObjectMapper yamlReader = new ObjectMapper(new YAMLFactory());
-            Object obj = yamlReader.readValue(yaml, Object.class);
-
-            ObjectMapper jsonWriter = new ObjectMapper();
-            return jsonWriter.writeValueAsString(obj);
-        } catch (Exception ex) {
-            throw new RuntimeException(ex);
-        }
     }
 }
